...
            }
    }
}

private extension FeedView {
    var navigationTitle: String {
        showsSidebarMenu ? "" : (viewModel.hasActiveSearch ? "Search" : selectedPostType.displayName)
    }

    var primaryPostTypes: [Domain.PostType] {
        [.news, .ask, .show, .jobs, .newest, .best, .active]
    }

...
